# VersoSonoro

./: README.md  app.py  pyproject.toml  teste.ipynb
